testing/Travis/testcases/Check/ShouldFail/Issue406.adl
CONTEXT Issue406a IN ENGLISH
   INTERFACE Foo : I[A]
   s[A*B]
ENDCONTEXT

-- Every INTERFACE expression needs a BOX part. See https://github.com/AmpersandTarski/Ampersand/issues/406
